require Java 21